--- a/index.html
+++ b/index.html
@@ -6,15 +6,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Tailwind and DaisyUI cnd -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.12/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <script src="js/utilits.js"></script>
+
 </head>
 
 <body>
-    <h1 class="text-2xl font-bold">Hello World</h1>
-    <script src="script.js"></script>
+    <header class="w-11/12 mx-auto py-5 space-y-20">
+        <nav id="nav_items"
+            class="flex flex-col gap-4 md:flex-row md:justify-between items-center border-b-2 border-dashed py-4"></nav>
+        <script src="./js/nax.js"></script>
+        <!-- Banner container -->
+        <section id="banner_secton"
+            class="py-20 px-4 flex flex-col gap-4 md:flex-row md:justify-between border rounded-2xl bg-[#12132D]">
+            <div class=" space-y-3 text-white">
+                <h1 class="text-4xl lg:text-7xl font-bold">
+                    Welcome to the <br>
+                    <span
+                        class="bg-gradient-to-r from-blue-900 to-blue-700 inline-block text-transparent bg-clip-text">ReTro</span>
+                    Forum
+                </h1>
+                <p class="text-white text-xl font-medium">Share your favorite opinion and win and wp forum coffee mug!
+                </p>
+                <input type="text" class="border-none outline-none cursor-pointer p-2" placeholder="enter your text">
+                <button class="p-2 -m-1 bg-blue-400">Search</button>
+            </div>
+            <div id="banner_form" class="h-[200px] overflow-y-scroll p-8 bg-white space-y-4 rounded-2xl"></div>
+        </section>
+        <script src="js/banner.js"></script>
+    </header>
+
+    <main class="w-11/12 mx-auto py-24">
+        <div class="md:w-8/12 lg:w-6/12 mx-auto text-center">
+            <h2 class="text-[40px] font-bold">Let’s Discuss</h2>
+            <p class="text-lg ">Yes, you can run unit tests and view the results directly within the app. The integrated
+                testing features
+                allow for a streamlined .</p>
+        </div>
+
+        <!-- Post News -->
+        <section id="post_news" class="flex flex-col gap-4 md:flex-row md:justify-between items-start md:my-10">
+            <!-- Post Cards -->
+            <div id="post_card" class="space-y-4"> </div>
+            <!-- post history -->
+            <div id="post_history" class="w-full md:w-4/12 p-4 bg-gray-100 rounded-2xl">
+                <h2 class="flex justify-between items-center p-4">
+                    <p class="text-xl font-semibold"> Title </p>
+                    <p> Mark as read ( <span id="post_history_counter">0</span> ) </p>
+                </h2>
+                <!-- <div class="text-gray-500 ">
+                    <h4 class="flex justify-between items-center mb-2 bg-white rounded-lg p-2">
+                        <p class="w-3/4 text-sm"> 10 Kids Unaware of Their Halloween Costume </p>
+                        <p class=""><i class="fa-regular fa-eye"></i> 1,568</p>
+                    </h4>
+
+                    <h4 class="flex justify-between items-center mb-2 bg-white rounded-lg p-2">
+                        <p class="w-3/4 text-sm"> 10 Kids Unaware of Their Halloween Costume </p>
+                        <p class=""><i class="fa-regular fa-eye"></i> 1,568</p>
+                    </h4>
+
+                    <h4 class="flex justify-between items-center mb-2 bg-white rounded-lg p-2">
+                        <p class="w-3/4 text-sm"> 10 Kids Unaware of Their Halloween Costume </p>
+                        <p class=""><i class="fa-regular fa-eye"></i> 1,568</p>
+                    </h4>
+
+                </div> -->
+            </div>
+        </section>
+
+        <!-- Join form section -->
+        <section
+            class="flex flex-col md:flex-row justify-between md:gap-6 px-10 rounded-2xl text-white p-6 items-center bg-[#12132D]">
+            <!-- join section content -->
+            <div class="space-y-3">
+                <h2 class="text-2xl font-bold">Join Our Forum</h2>
+                <p>Share your favorite opinion and win and wp forum coffee mug! Yes, you can run unit tests and view the
+                    results directly within the app. </p>
+                <p><button class="btn">Registered Now</button></p>
+            </div>
+            <!--join section image -->
+            <div>
+                <img src="./images/joinforum.png" alt="">
+            </div>
+        </section>
+
+        <!-- Latest Post -->
+        <div class="md:w-8/12 lg:w-6/12 mx-auto text-center my-14">
+            <h2 class="text-[40px] font-bold">Latest Posts</h2>
+            <p class="text-lg ">Yes, you can run unit tests and view the results directly within the app. The integrated
+                testing features
+                allow for a streamlined .</p>
+        </div>
+
+        <!-- Latest post cards -->
+        <section id="latest_card" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <!-- <div class="p-6 bg-gray-100 rounded-lg space-y-3">
+                <figure>
+                    <img src="./images/joinforum.png" alt="">
+                </figure>
+                <h4 class="space-x-3"><i class="fa-regular fa-calendar"></i> <span>24 July 2024</span></h4>
+                <h3 class="text-lg font-bold">What will a mars habitat force that impact in our daily life!!!</h3>
+                <p>Yes, you can run unit tests and view the results directly within the app. </p>
+                <div class="flex gap-4">
+                    <p><img src="./images/logo.png" alt=""></p>
+                    <div>
+                        <h3 class="text-xl font-bold">Jhone Duo</h3>
+                        <p>Unknown</p>
+                    </div>
+                </div>
+            </div> -->
+        </section>
+
+        <!-- Latest Post -->
+        <div class="md:w-8/12 lg:w-6/12 mx-auto text-center my-14 space-y-4">
+            <h2 class="text-[40px] font-bold">ReTro</h2>
+            <p class="text-lg ">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                piece of classical Latin literature from 45 BC</p>
+            <p class="text-2xl space-x-4">
+                <i class="fa-brands fa-bluesky"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-square-google-plus"></i>
+            </p>
+        </div>
+
+    </main>
+
+    <footer class="border-t-2 py-16 text-center">
+        <p class="text-base text-gray-500">2017, All Rights Reserved.</p>
+    </footer>
+
+    <script src="js/allpost.js"></script>
+    <script src="js/latest_post.js"></script>
 </body>
 
 </html>
